Update to Java 17
Apache Ignite needs a lot of add-opens to run with Java 17.